--- a/debian/control
+++ b/debian/control
@@ -27,9 +27,8 @@ Description: multi key dictionary implementation - Python 2.7
  Multi-key dict provides also extended interface for iterating over items and
  keys (e.g. by the key type), which might be useful when creating, e.g.
  dictionaries with index-name key pair allowing to iterate over items using
- either: names or indexes. It can be useful for many many other similar
- use-cases, and there is no limit to the number of keys used to map to the
- value.
+ either: names or indexes. It can be useful for many other similar use-cases,
+ and there is no limit to the number of keys used to map to the value.
  .
  There are few other useful methods, e.g. to iterate over dictionary (by/using)
  selected key type, finding other keys mapping to the same value etc.
@@ -49,9 +48,8 @@ Description: Multi key dictionary implementation - Python 3.x
  Multi-key dict provides also extended interface for iterating over items and
  keys (e.g. by the key type), which might be useful when creating, e.g.
  dictionaries with index-name key pair allowing to iterate over items using
- either: names or indexes. It can be useful for many many other similar
- use-cases, and there is no limit to the number of keys used to map to the
- value.
+ either: names or indexes. It can be useful for many other similar use-cases,
+ and there is no limit to the number of keys used to map to the value.
  .
  There are few other useful methods, e.g. to iterate over dictionary (by/using)
  selected key type, finding other keys mapping to the same value etc.
